NATTQA-ENV/force-app/main/default/objects/Shipment_Schedule__c/Shipment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Shipment Schedule</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Shipment Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>