NATTQA-ENV/force-app/main/default/objects/Shipment_Schedule__c/fields/CONTAINER_Account__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipment Schedules Account</relationshipLabel>
    <relationshipName>Shipment_Schedules_Account</relationshipName>
    <type>Lookup</type>
</CustomField>