NATTQA-ENV/force-app/main/default/objects/Shipment_Schedule__c/fields/CONTAINER_Destination__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NATT_Address__c.NATT_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.CONTAINER_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>NATT_Address__c.NATT_Type__c</field>
            <operation>equals</operation>
            <value>Ship To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Shipment Schedules</relationshipLabel>
    <relationshipName>Shipment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>