NATTQA-ENV/force-app/main/default/objects/Shipment_Schedule__c/fields/CONTAINER_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Number</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Shipment Schedules</relationshipLabel>
    <relationshipName>Shipment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>