NATTQA-ENV/force-app/main/default/objects/Shipment_Schedule__c/fields/CONTAINER_WeekOf__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_WeekOf__c</fullName>
    <label>Week Of</label>
    <type>Date</type>
</CustomField>