NATTQA-ENV/force-app/main/default/objects/Shipment_Schedule__c/fields/Natt_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Natt_Related_Account__c</fullName>
    <formula>CONTAINER_Destination__r.NATT_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Natt_Related Account</label>
    <type>Text</type>
</CustomField>