NATTQA-ENV/force-app/main/default/objects/Shipment_Schedule__c/validationRules/CONTAINER_Shipment_Schedule.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_Shipment_Schedule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(CONTAINER_Quote_Number__r.ApprovalStatus__c , &apos;Pending&apos;), OR( ISCHANGED(CONTAINER_Quote_Number__c ) , ISCHANGED( CONTAINER_Qty__c ) ,ISCHANGED( CONTAINER_WeekOf__c ) ,ISCHANGED( CONTAINER_Destination__c ) ,ISCHANGED( CONTAINER_Account__c ) ))</errorConditionFormula>
    <errorMessage>You need to recall approval to make changes.</errorMessage>
</ValidationRule>