NATTQA-ENV/force-app/main/default/objects/Shipment_Schedule__c/validationRules/Qty_field_as_per_Qty_on_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Qty_field_as_per_Qty_on_Quote</fullName>
    <active>true</active>
    <description>Qty shall not exceed the Qty entered on associated Quote</description>
    <errorConditionFormula>CONTAINER_Qty__c &gt; CONTAINER_Quote_Number__r.CONTAINER_Qty__c</errorConditionFormula>
    <errorMessage>Qty can not be greater than Qty mentioned in Quote</errorMessage>
</ValidationRule>